# irl-srt-server

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  sls.conf  srt-live-client.cpp  srt-live-server.cpp
slscore/: CMakeLists.txt  CxxUrl.cpp  HttpClient.cpp  HttpClient.hpp  HttpRoleList.cpp  README.md  SLSArray.cpp  SLSClient.cpp  SLSClient.hpp  SLSEpollThread.cpp  SLSGroup.cpp  SLSListener.cpp  SLSListener.hpp  SLSLog.cpp  SLSLog.hpp  SLSManager.cpp  SLSManager.hpp  SLSMapData.cpp  SLSMapData.hpp  SLSMapPublisher.cpp  SLSMapPublisher.hpp  SLSMapRelay.cpp  SLSMapRelay.hpp  SLSPlayer.cpp  SLSPublisher.cpp  SLSPublisher.hpp  SLSPuller.cpp  SLSPuller.hpp  SLSPullerManager.cpp  SLSPusher.cpp  SLSPusher.hpp  SLSPusherManager.cpp  SLSRecycleArray.cpp  SLSRelay.cpp  SLSRelay.hpp  SLSRelayManager.cpp  SLSRelayManager.hpp  SLSRole.cpp  SLSRole.hpp  SLSRoleList.cpp  (+14 more)
src/: CMakeLists.txt  sls.conf  srt-live-client.cpp  srt-live-server.cpp
src/core/: CMakeLists.txt  CxxUrl.cpp  CxxUrl.hpp  HttpClient.cpp  HttpClient.hpp  HttpRoleList.cpp  HttpRoleList.hpp  SLSArray.hpp  SLSClient.cpp  SLSClient.hpp  SLSEpollThread.cpp  SLSEpollThread.hpp  SLSGroup.cpp  SLSGroup.hpp  SLSListener.cpp  SLSListener.hpp  SLSLock.hpp  SLSLog.cpp  SLSLog.hpp  SLSManager.cpp  SLSManager.hpp  SLSMapData.cpp  SLSMapData.hpp  SLSMapPublisher.cpp  SLSMapPublisher.hpp  SLSMapRelay.cpp  SLSMapRelay.hpp  SLSPlayer.hpp  SLSPublisher.hpp  SLSPuller.hpp  SLSPullerManager.cpp  SLSPullerManager.hpp  SLSPusher.hpp  SLSPusherManager.cpp  SLSPusherManager.hpp  SLSRecycleArray.hpp  SLSRelay.cpp  SLSRelay.hpp  SLSRelayManager.cpp  SLSRelayManager.hpp  (+21 more)
