set(slscore_files
	common.cpp
	common.hpp
	conf.cpp
	conf.hpp
	constants.hpp
	CxxUrl.cpp
	CxxUrl.hpp
	HttpClient.cpp
	HttpClient.hpp
	HttpRoleList.cpp
	HttpRoleList.hpp
	README.md
	SLSArray.cpp
	SLSArray.hpp
	SLSClient.cpp
	SLSClient.hpp
	SLSEpollThread.cpp
	SLSEpollThread.hpp
	SLSGroup.cpp
	SLSGroup.hpp
	SLSListener.cpp
	SLSListener.hpp
	SLSLock.hpp
	SLSLog.cpp
	SLSLog.hpp
	SLSManager.cpp
	SLSManager.hpp
	SLSMapData.cpp
	SLSMapData.hpp
	SLSMapPublisher.cpp
	SLSMapPublisher.hpp
	SLSMapRelay.cpp
	SLSMapRelay.hpp
	SLSPlayer.cpp
	SLSPlayer.hpp
	SLSPublisher.cpp
	SLSPublisher.hpp
	SLSPuller.cpp
	SLSPuller.hpp
	SLSPullerManager.cpp
	SLSPullerManager.hpp
	SLSPusher.cpp
	SLSPusher.hpp
	SLSPusherManager.cpp
	SLSPusherManager.hpp
	SLSRecycleArray.cpp
	SLSRecycleArray.hpp
	SLSRelay.cpp
	SLSRelay.hpp
	SLSRelayManager.cpp
	SLSRelayManager.hpp
	SLSRole.cpp
	SLSRole.hpp
	SLSRoleList.cpp
	SLSRoleList.hpp
	SLSSrt.cpp
	SLSSrt.hpp
	SLSSyncClock.cpp
	SLSSyncClock.hpp
	SLSThread.cpp
	SLSThread.hpp
	TCPRole.cpp
	TCPRole.hpp
	TSFileTimeReader.cpp
	TSFileTimeReader.hpp
	util.cpp
	util.hpp
)

add_library(slscore ${slscore_files})
target_link_libraries(slscore spdlog stdc++fs)
